<resources>
    <string name="app_name">Cool-Chat-Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="create_new_dialog">Создать новый диалог</string>
    <string name="dialog_name">Название диалога</string>
    <string name="contact">Контакт:</string>
    <string name="create">Создать</string>
    <string name="dialogs">Диалоги</string>
    <string name="contacts">Контакты</string>
    <string name="avatar">Аватар</string>
    <string name="name">Имя</string>
    <string name="logo">logo</string>
    <string name="loading">loading</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="action_stop_service">Остановить сервис</string>
    <string name="action_exit">Выход</string>
    <string name="save">Сохранить</string>
    <string name="contact_does_not_exist">Пользователь не существует. Проверьте правильность логина.</string>
    <string name="new_dialog">Новый диалог</string>
    <string name="nothing_was_found">Ничего не найдено...</string>
    <string name="properties">Свойства</string>
    <string name="members">Участники</string>
    <string name="leave_dialog">Покинуть диалог</string>
    <string name="invite">Пригласить</string>
</resources>
