<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="15dp"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryBackground">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:elevation="2dp">
            <TextView
                android:text="@string/login"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:textSize="@dimen/auth_size"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/auth_login"
                android:inputType="text"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/password"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:textSize="@dimen/auth_size"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/auth_password"
                android:inputType="textPassword"
                android:layout_margin="5dp"
                android:textSize="@dimen/dialog_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/reg_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/reg_text_view"
                    android:text="@string/repeat_password"
                    android:layout_margin="5dp"
                    android:paddingLeft="5dp"
                    android:layout_gravity="start"
                    android:textSize="@dimen/auth_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    style="@style/Widget.AppCompat.EditText"
                    android:id="@+id/reg_password"
                    android:layout_margin="5dp"
                    android:textSize="@dimen/dialog_text_size"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            style="@style/Base.TextAppearance.AppCompat.Widget.Button"
            android:id="@+id/auth_button"
            android:text="@string/enter"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:elevation="2dp" />
    </LinearLayout>

    <Button
        android:layout_gravity="bottom"
            android:id="@+id/reg_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</FrameLayout>