<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimaryBackground">

    <LinearLayout
        android:elevation="2dp"
        android:background="@color/white"
        android:padding="@dimen/padding_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_dialog_image"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_dialog_name"
            android:text="@string/dialog_name"
            android:textSize="@dimen/dialog_text_size"
            android:layout_margin="5dp"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:elevation="2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:padding="@dimen/padding_main"
            android:textSize="@dimen/auth_size"
            android:text="@string/members"
            android:elevation="4dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/detail_dialog_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/detail_dialog_leave_button"
        android:text="@string/leave_dialog"
        android:background="@color/white"
        android:elevation="2dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>